--- a/src/app/analisis/analisis/analisis.component.html
+++ b/src/app/analisis/analisis/analisis.component.html
@@ -48,7 +48,7 @@
     </select>
   </div>
   <br>
-  <button [disabled]="!fechad.valid || !fechah.valid" type="button" (click)="abreAnalisis(tipo, fechade, fechaha, municipio, lugar)">MUESTRA DATOS</button> 
+  <button [disabled]="!fechad.valid || !fechah.valid" type="button" (click)="abreAnalisis(tipo, fechade, fechaha, municipio, lugar)">Muestra Datos</button> 
 </div>
 <br>
 <router-outlet></router-outlet>
