--- a/src/app/informes-lim/resumen-dia/resumen-dia.component.css
+++ b/src/app/informes-lim/resumen-dia/resumen-dia.component.css
@@ -1,4 +1,45 @@
-pre {
-    text-align: left;
-    white-space: pre-line;
+.turno {
+    overflow: auto;
+    border-radius: 0 0.125rem 0.125rem 0;
+    background: #e6e6e6;
+    padding: 0.75rem;
+    margin: 0px;
+    border-left: 0.25rem solid #1565c0;    
 }
+
+.total {
+    overflow: auto;
+    border-radius: 0 0.125rem 0.125rem 0;
+    background: #e6e6e6;
+    padding: 0.75rem;
+    margin: 0px;
+    border-left: 0.25rem solid #68CE14;    
+}
+
+.totaldia {
+    overflow: auto;
+    border-radius: 0 0.125rem 0.125rem 0;
+    background: #e6e6e6;
+    padding: 0.75rem;
+    margin: 0px;
+    border-left: 0.25rem solid #E91111;    
+}
+
+pre {
+    overflow: auto;
+    border-left: none;
+    text-align: left;
+    white-space: pre-line;  
+    background: transparent;   
+    padding: 0px;
+    margin: 0px;    
+    }    
+
+/* pre {
+    overflow: auto;
+    border-radius: 0 0.125rem 0.125rem 0;
+    background: #e6e6e6;
+    padding: 0.75rem;
+    margin: 0.5rem;
+    border-left: 0.25rem solid #1565c0;
+    }        */
