--- a/src/app/partes-lim/partes-lim-lista/partes-lim-lista.component.html
+++ b/src/app/partes-lim/partes-lim-lista/partes-lim-lista.component.html
@@ -13,6 +13,7 @@
   <table>
     <thead>
       <tr>
+        <th>#</th>
         <th>Playa</th>
         <th>Operario</th>
         <th>Turno</th>
@@ -20,7 +21,8 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let parte of listaPartes">
+      <tr *ngFor="let parte of listaPartes; let i = index">
+        <td data-label="#">{{ i }}</td>        
         <td data-label="Playa">{{ parte.lugar }}</td>
         <td data-label="Operario">{{ parte.operario }}</td>
         <td data-label="Turno">{{ parte.turno }}</td>
