--- a/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
+++ b/src/app/partes-lim/partes-lim-detalle/partes-lim-detalle.component.html
@@ -124,6 +124,11 @@
   </fieldset>
   <fieldset>
     <legend>Observaciones</legend>
+    <div class="vertical">
+      <label>Acceso rápido</label>
+      <button type="button" (click)="setAccesoRapido(11)">CP</button>
+      <button type="button" (click)="setAccesoRapido(12)">CO</button>
+    </div>    
   <div class="vertical">
     <div>
       <label for="observacion_ayto">Ayuntamiento</label>
