--- a/src/app/partes-lim/partes-lim-lista/partes-lim-lista.component.html
+++ b/src/app/partes-lim/partes-lim-lista/partes-lim-lista.component.html
@@ -17,7 +17,13 @@
         <th>Playa</th>
         <th>Operario</th>
         <th>Turno</th>
-        <th>Editar</th>        
+        <th>Tipo</th>           
+        <th>RSUM</th>   
+        <th>RSUC</th>  
+        <th>SELEC</th>         
+        <th>ALGT</th>  
+        <th>ALGP</th>          
+        <th>Editar</th>                               
       </tr>
     </thead>
     <tbody>
