--- a/src/app/core/dash/top-bar/top-bar.component.html
+++ b/src/app/core/dash/top-bar/top-bar.component.html
@@ -1,5 +1,6 @@
 <div class="input-group">
     <a [routerLink]="['/dash/operarios']" class="button" routerLinkActive="primary">Operarios</a>
+    <a [routerLink]="['/dash/incidencias']" class="button" routerLinkActive="primary">Incidencias</a>    
     <a [routerLink]="['/dash/limpieza']" class="button" routerLinkActive="primary">Partes</a>
     <a [routerLink]="['/dash/informeslimpieza']" class="button" routerLinkActive="primary">Informes</a>
     <a [routerLink]="['/dash/analisis']" class="button" routerLinkActive="primary">Analisis</a>
